# p2r_hydrate

./: Cargo.toml  README.md
src/: app.rs  globalcss.rs  homepage.rs  lib.rs  main.rs  nonesense.rs  novel_list.rs  novels.rs  p2r_macros.rs  p2rmenu.rs  page_counter.rs  pre_date.rs  settings.rs  soundload.rs  soundloader.rs  sounds.rs
src/novels/: enter_code.rs  novel_1.rs  novel_2.rs  novel_3.rs
