[package]
name = "p2r_hydrate"
version = "0.1.0"
edition = "2021"

[lib]
name = "p2r_hydrate"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "p2r_hydrate"
path = "src/main.rs"
required-features = ["ssr"]

[package.metadata.leptos]
output-name = "p2r_hydrate"
site = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
assets-dir = "assets"

bin-features = ["ssr"]
lib-features = ["hydrate"]

bin-target-triple = "x86_64-pc-windows-msvc"

[dependencies]
leptos = { version = "0.8.15", default-features = false }
leptos_router = { version = "0.8.11", default-features = false }
leptos_axum = { version = "0.8", optional = true }

wasm-bindgen = "0.2.108"
feature-extension-for-wasm-bindgen-futures = "0.2.3"
web-sys = { version = "0.3", features = [
"AudioContext",
"AudioContextState",
"AudioContextOptions",
"AudioDestinationNode",
"AudioParam", 
"AudioBuffer",
"AudioBufferSourceNode",
"BaseAudioContext",
"HtmlAudioElement", 
"Window",
"Response",
"Request",
"MediaElementAudioSourceNode",
"RequestMode",
"GainNode",
"GainOptions"
] }

fastrand = "2.3.0"

axum = { version = "0.8.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "cors"], optional = true }
http = { version = "1.4.0", optional = true }

[features]
default = []
csr = ["leptos/csr", "leptos/nightly", "leptos_router/nightly"]
hydrate = ["leptos/hydrate", "leptos/nightly", "leptos_router/nightly"]
ssr = [
    "leptos/ssr",
    "leptos/nightly",
    "leptos_router/ssr",
    "leptos_router/nightly",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
]